# rua-rust

./: .gitignore  Cargo.toml  README.md  diesel.toml
demo/config/: Cargo.toml
demo/config/src/: main.rs
demo/config_rs/: Cargo.toml  config.toml
demo/config_rs/src/: main.rs
demo/config_structopt/: readme.md
demo/config_structopt/src/: main.rs
demo/consul_service/: Cargo.toml
demo/consul_service/src/: main.rs
demo/grammar/: Cargo.toml
demo/grammar/examples/: closures.rs  lifetimes.rs
demo/grammar/src/: main.rs
demo/grpc/: Cargo.toml  build.rs
demo/grpc/go_test/: go.mod  go.sum  helloworld.pb.go  helloworld.proto  main.go
demo/grpc/go_test/dev/: gomicro_test.go
demo/grpc/lib/tonic-build-0.6.0/: .cargo_vcs_info.json  Cargo.toml
demo/grpc/lib/tonic-build-0.6.0/src/: jsonrpc.rs  lib.rs  prost.rs  server.rs
demo/grpc/proto/: helloworld.proto
demo/grpc/src/: client.rs  server.rs
demo/grpc/src/lib/: codec.rs  grpc_router.rs  jsonrpc.rs  mod.rs
demo/json/: Cargo.toml
demo/json/src/: main.rs  sample.json
demo/json_rpc/: Cargo.toml
demo/json_rpc/src/: main.rs
demo/macro_demo/src/: main.rs
demo/nsq/: Cargo.toml  readme.md
demo/nsq/proto/: helloworld.proto
demo/nsq/src/: consumer.rs  producer.rs
demo/orm/: Cargo.toml
demo/orm/src/: main.rs
demo/redis_json/: Cargo.toml
demo/redis_json/src/: main.rs  redis_cli.rs
demo/toml_deserialize/: Cargo.toml  config.toml
demo/toml_deserialize/src/: main.rs
examples/: db.rs
examples/orm/: main.rs
examples/orm/schema_lib/: schema.rs
src/: main.rs
